--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="add_friend_input_uid_hint">Input Friend UID…</string>
     <string name="add_friend_input_uid_prompt">UID:</string>
     <string name="button_text_add">Add</string>
+    <string name="add_friend_display_user_uid">Your UID: %1$s</string>
 </resources>
