--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="add_friend_input_uid_prompt">UID:</string>
     <string name="button_text_add">Add</string>
     <string name="add_friend_display_user_uid">Your UID: %1$s</string>
+    <string name="button_text_zoom_in">+</string>
+    <string name="button_text_zoom_out">-</string>
 </resources>
